--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "mongoose": "^6.6.0"
+    "mongoose": "^6.6.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
